css/style.css
/*Reset CSS*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

:root {
  --Bg-blue: #D0E4F4;
  --White: #ffffff;
}

/*Generic*/
body {
  font-size: 14px;
  font-family: "Jost", sans-serif;
  font-weight: 400;
  font-style: normal;
  overflow-x: hidden;
}

.container {
  max-width: 1240px;
  margin: 0 auto;
}

/*Header*/
/*Navbar*/
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 15px 0px;
}

nav img {
  max-width: 100px;
  aspect-ratio: 16 /9;
}

nav i {
  font-size: 1.8rem;
}

/*Main*/
/*Hero section*/
.hero-section {
  display: grid;
  grid-template-columns: repeat(11, 1fr);
  grid-auto-rows: 1fr;
}

.hero-content {
  grid-column: 1 /6;
  grid-row: 2 /6;
  display: flex;
  flex-direction: column;
  gap: 30px;
  padding: 30px;
}

h1 {
  font-size: 4.5rem;
  font-weight: 900;
}

.hero-content p {
  line-height: 2;
  font-size: 1.5rem;
  font-weight: 500;
  padding-right: 130px;
}

.btn {
  width: max-content;
  color: black;
  text-decoration: none;
  font-size: 1.3rem;
  padding: 16px 32px;
  border: 1px solid black;
}

.blue-bg {
  grid-column: 8/ 12;
  grid-row: 1 /4;
  background-color: var(--Bg-blue);
  z-index: 0;
}

.polka-bg {
  grid-column: 5 /9;
  grid-row: 4/7;
  margin-top: 50px;
  margin-bottom: -50px;
  z-index: 1;
  background-image: url(../assets/images/u_150.png);
}

.hero-img {
  margin-top: -50px;
  margin-bottom: 50px;
  grid-column: 6/ 11;
  grid-row: 2/ 7;
  z-index: 2;
  background: url(../assets/images/as.jpg) center/cover;
}

.blue-bg2 {
  grid-column: 4 / 12;
  grid-row: 6 / 8;
  margin-left: -20px;
  margin-top: -30px;
  z-index: 0;
  position: relative;
  background-color: var(--Bg-blue);
}

.blue-bg2::after {
  content: '';
  width: 100vw;
  height: 100%;
  z-index: 0;
  position: absolute;
  background-color: var(--Bg-blue);
  left: 100%;
}

.sub-sign {
  z-index: 1;
  font-size: 1.2rem;
  padding: 30px 0px;
  grid-column: 1/4;
  grid-row: 7/8;
}

.sub-sign a {
  color: black;
}

/*Page 2*/
.page2 {
  display: grid;
  grid-template-columns: repeat(11, 1fr);
  grid-auto-rows: 1fr;
}

.page2-img {
  background: url(../assets/images/wf.jpg) center/cover;
  grid-column: 1/7;
  grid-row: 1/5;
  z-index: 2;
}

.blue-bg3 {
  grid-column: 4 / 12;
  grid-row: 1 / 8;
  margin-left: -20px;
  z-index: 0;
  position: relative;
  background-color: var(--Bg-blue);
}

.blue-bg3::after {
  content: '';
  width: 100vw;
  height: 100%;
  z-index: 0;
  position: absolute;
  background-color: var(--Bg-blue);
  left: 100%;
}

.grid-box {
  margin-left: -50px;
  grid-column: 7/12;
  grid-row: 2/7;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 10px;
  z-index: 3;
}

.grid-box div {
  display: flex;
  flex-direction: column;
  gap: 20px;
  background-color: var(--White);
  padding: 20px;
}

.grid-box h2 {
  font-size: 1.8rem;
  font-weight: 700;
}

.grid-box p {
  line-height: 1.5;
  font-size: 1.2rem;
}

.polka-bg2 {
  grid-column: 1 /5;
  grid-row: 4/6;
  margin-top: 50px;
  margin-bottom: -50px;
  z-index: 1;
  position: relative;
}

.polka-bg2::after {
  content: '';
  width: 100vw;
  height: 100%;
  z-index: 1;
  position: absolute;
  background: url(../assets/images/u_150.png);
  right: 0;
}

/*Page 3*/
.page3 {
  display: grid;
  grid-template-columns: repeat(11, 1fr);
  grid-auto-rows: 1fr;
  position: relative;
}

.page3::after {
  content: '';
  width: 100vw;
  height: 100%;
  z-index: 0;
  position: absolute;
  background-color: var(--Bg-blue);
  left: 100%;
}

.page3-content {
  grid-column: 1 /9;
  grid-row: 2 / 6;
  z-index: 2;
  display: grid;
  padding: 40px;
  padding-left: 0;
}

.page3-content h2 {
  font-size: 4rem;
}

.blue-bg4 {
  grid-column: 1/12;
  grid-row: 1 /7;
  z-index: 0;
  background-color: var(--Bg-blue);
  position: relative;
}

.blue-bg4::before {
  content: '';
  width: 100vw;
  height: 100%;
  z-index: 0;
  position: absolute;
  background-color: var(--Bg-blue);
  right: 100%;
}

.page3-img {
  background: url(../assets/images/-min-16.jpg) center/cover;
  z-index: 1;
  grid-column: 6 / 12;
  grid-row: 1/7;
  margin-top: 50px;
  margin-bottom: -50px;
}

.polka-bg3 {
  grid-column: 6;
  grid-row: 7/8;
  z-index: 2;
  margin: -50px -50px -50px -70px;
  background: url(../assets/images/u_150.png);
}

/*Page 4*/
.page4 {
  display: grid;
  grid-template-columns: repeat(11, 1fr);
  grid-auto-rows: 1fr;
  position: relative;
  padding: 0px 20px;
}

.page4::after {
  content: '';
  width: 100vw;
  height: 100%;
  z-index: 0;
  position: absolute;
  background-color: var(--Bg-blue);
  left: 100%;
}

.features {
  grid-column: 1/12;
  grid-row: 3/10;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 100px;
  padding: 0px 50px;
}

.feature-item {
  display: flex;
  gap: 20px;
}

.feature-icon {
  background-color: var(--Bg-blue);
  border-radius: 25px;
  width: 100px;
  height: 50px;
  position: relative;
}

.icon1::after {
  content: '';
  background: url(../assets/images/svg-image-4.svg) center/cover;
  width: 25px;
  aspect-ratio: 1;
  position: absolute;
  margin: 13px;
}

.icon2::after {
  content: '';
  background: url(../assets/images/svg-image-6.svg) center/cover;
  width: 25px;
  aspect-ratio: 1;
  position: absolute;
  margin: 13px;
}

.icon3::after {
  content: '';
  background: url(../assets/images/svg-image-8.svg) center/cover;
  width: 25px;
  aspect-ratio: 1;
  position: absolute;
  margin: 13px;
}

.icon4::after {
  content: '';
  background: url(../assets/images/svg-image-10.svg) center/cover;
  width: 25px;
  aspect-ratio: 1;
  position: absolute;
  margin: 13px;
}

.feature-content {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.feature-content h2 {
  font-size: 2rem;
}

.feature-content p {
  font-size: 1.4rem;
  line-height: 2;
}

/*Page5*/
.page5 {
  display: grid;
  grid-template-columns: repeat(11, 1fr);
  gap: 30px;
}

.branding-images {
  grid-column: 2/7;
  grid-row: 3/11;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(3, 1fr);
  gap: 20px;
  z-index: 1;
  margin-left: -60px;
  margin-top: 50px;
}

.branding-images img {
  width: 100%;
  height: 100%;
}

.branding-content {
  grid-column: 7/12;
  grid-row: 3/5;
  display: flex;
  flex-direction: column;
  gap: 10px;
  z-index: 1;
  font-size: 1.4rem;
  line-height: 1.5;
  margin-top: 50px;

}

.blue-bg5 {
  grid-column: 2/11;
  grid-row: 2 /15;
  z-index: 0;
  margin-bottom: -60px;
  background-color: var(--Bg-blue);
}

.polka-bg5 {
  grid-column: 9/12;
  grid-row: 5/11;
  z-index: 1;
  margin-bottom: -50px;
  background: url(../assets/images/u_150.png);
}

.branding-heading {
  grid-column: 6/12;
  grid-row: 8/9;
  z-index: 3;
  font-size: 4.1rem;
  font-weight: 900;
  padding: 40px;
  background-color: var(--White);
}

/*Page 6*/
.page6 {
  display: grid;
  grid-template-columns: repeat(11, 1fr);
  grid-auto-rows: 1fr;
  gap: 5px 10px;
}

.blue-bg6-1 {
  grid-column: 1 / 5;
  grid-row: 2/ 5;
  background-color: var(--Bg-blue);
  z-index: 0;
  margin-top: 10px;
}

.blue-bg6-2 {
  grid-column: 4 / 8;
  grid-row: 5/7;
  background-color: var(--Bg-blue);
  z-index: 0;
  margin-bottom: 10px;
}

.page6-img {
  grid-column: 1/8;
  grid-row: 3/6;
  margin: -100px 40px;
  background: url(../assets/images/657.jpg) center/cover;
  z-index: 2;
}

.page6-content {
  grid-column: 8/12;
  grid-row: 3/6;
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 0px 10px;
  font-size: 1.2rem;
  line-height: 2;

}

.page6 h2 {
  font-size: 3rem;
  font-weight: 700;
}

/*Page 7*/
.page7{
  display: grid;
  grid-template-columns: repeat(11, 1fr);
  grid-auto-rows: 1fr;
}

.page7-img{
  grid-column: 6/11;
  grid-row: 2/9;
  z-index: 1;
  background: url(../assets/images/rgerg.jpg) center/cover;
}

.blue-bg7{
  grid-column: 1/12;
  grid-row: 4/6;
  background-color: var(--Bg-blue);
  z-index: 0;
  position: relative;
}

.blue-bg7::after, .blue-bg7::before{
  content: '';
  width: 100vw;
  height: 100%;
  background-color: var(--Bg-blue);
  position: absolute;
}

.blue-bg7::before{
  right: 100%;
}

.contact-us{
  grid-column: 2/7;
  grid-row: 3/8;
  z-index: 3;
  display: flex;
  flex-direction: column;
  gap: 20px;
  justify-content: center;
  align-items: center;
  background-color: var(--White);
  padding: 70px 40px;
  margin-top: -40px;
}

.contact-us h2{
  font-size: 3rem;
}

input,textarea{
  width: 100%;
  font-size: 1.1rem;
  padding: 10px;
  outline: none;
  border: none;
  border-bottom: 1px solid black;
}

.btn-sub{
  outline: none;
  background: none;
  border: none;
  background-color: black;
  color: var(--White);
  padding: 16px 32px;
  cursor: pointer;
}

.page7 p{
  grid-row:9 ;
  grid-column: 5/7;
}

/*Footer*/
footer{
  background-color: var(--Bg-blue);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 40px;
  font-size: 1.3rem;
  position: relative;
  z-index: 1;
}

footer::before,footer::after{
  content: '';
  width: 100vw;
  height: 100%;
  background-color: var(--Bg-blue);
  position: absolute;
  z-index: 0;
  right: 100%;
}

footer::after{
  left: 100%;
}


/*Media Queries*/
@media screen and (max-width:1024px) {

  .blue-bg::after,
  .blue-bg2::after,
  .blue-bg3::after,
  .blue-bg4::before,
  .blue-bg7::before,
  .blue-bg7::after,
  .page3::after,
  .page4::after {
    display: none;
  }

  .feature-icon {
    width: 130px;
  }
}

@media screen and (max-width:900px) {

  .grid-box,
  .page4,
  .features {
    display: flex;
    flex-direction: column;
  }

  .feature-icon {
    width: 170px;
  }

  .polka-bg3 {
    margin: -40px;
    margin-bottom: 40px;
  }

}

